samples/_failures_safe/1761081918_173271_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edb881ec.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_edb881ec.c:169:21: error: expected ‘;’ at end of input
  169 |                 edge
      |                     ^
      |                     ;
./samples/SAFE/__tmp_edb881ec.c:169:17: error: expected declaration or statement at end of input
  169 |                 edge
      |                 ^~~~
./samples/SAFE/__tmp_edb881ec.c:169:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_edb881ec.c:169:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_edb881ec.c:169:17: error: expected declaration or statement at end of input
